[package]
name = "envoy-api-rs"
version = "0.1.0"
edition = "2021"
description = "Envoy API"
license = "Apache"

[dependencies]
tonic = "^0.12"
tonic-health = "^0.12"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1.0"
serde_yaml = "^0.9"
prost-reflect = { version = "0.14", features = ["serde", "derive"]}
prost = "0.13"


[build-dependencies]
prost-build = "^0.13"
tonic-build = "^0.12"
glob = "^0.3"
prost-reflect = { version = "0.14", features = ["serde", "derive"]}



[lib]
doctest = false
